version 0.99.2 (not yet released)
           * Now can specify just lon_0 for all cylindrical projections
             (to produce global map centered on lon_0).
           * Added save_background.py example, showing how to re-use
             a map background without redrawing coastlines.
           * Added embedding_map_in_wx.py example (courtesy of
             Mauro Cavalcanti).
           * Added masked array support to shiftgrid function
             (thanks to Jesper Larsen).
           * defer import of netcdf stuff till it is needed (in NetCDFFile
             function).
           * Added McBryde-Thomas Flat Polar Quartic (projection =
             'mbtfpq'), Gall Stereographic Cylindrical (projection =
             'gall') and van der Grinten (projection = 'vandg').
           * fix bugs in warpimage and bluemarble methods for several projections.
           * bugfix patch for rotate_vector from David Huard.  David
             also contributed the beginnings of a test suite.
           * make sure scatter method sets pyplot color mappable.
           * added cubed_sphere example.
           * updated NetCDFFile to use pupynere 1.0.2 (now can write as well
             as read!).
           * now works with geos version 3.
           * added "proj4string" Basemap instance variable.
           * testgdal example now uses gdal to read topo data from a raster
             DEM file and ogr to read state boundaries from a shape file.
           * warpimage method can now handle gray-scale images, and 
             images specifed as URLs (for example, the Blue Marble images from
             http://earthobservatory.nasa.gov/Newsroom/BlueMarble/BlueMarble_monthlies.html).
version 0.99.1 (svn revision 5961)
           * geos-2.2.3 patched for compatibility with gcc 4.3.
           * added "barbs" method to draw wind barbs on the map.
           * added "tissot" method for generating Tissot's indicatrix
             (see example plot_tissot.py).